--- a/qr1.html
+++ b/qr1.html
@@ -8,11 +8,11 @@
 <h2>Reproducción Automática</h2>
 
 <audio id="audio1" controls autoplay>
-  <source src="https://github.com/muralesalacon/audiosmurales/blob/7602fd016cfb28808bbb7a44fb75dc35e1e5cd91/Alba%20y%20Santos/Audio.wav" type="audio/mpeg">
+  <source src="https://raw.githubusercontent.com/muralesalacon/audiosmurales/refs/heads/main/qr1/Audio.wav" type="audio/mpeg">
 </audio>
 
 <audio id="audio2">
-  <source src="https://github.com/muralesalacon/audiosmurales/blob/7602fd016cfb28808bbb7a44fb75dc35e1e5cd91/Alba%20y%20Santos/Opinion.wav" type="audio/mpeg">
+  <source src="https://raw.githubusercontent.com/muralesalacon/audiosmurales/refs/heads/main/qr1/Opinion.wav" type="audio/mpeg">
 </audio>
 
 <script>
