--- a/qr1.html
+++ b/qr1.html
@@ -2,17 +2,15 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8" />
-<title>Audio QR</title>
+<title>Audio QR1</title>
 </head>
 <body>
-<h2>Reproducción Automática</h2>
-
 <audio id="audio1" controls autoplay>
-  <source src="https://github.com/user-attachments/files/23745766/Audio1.wav" type="audio/mpeg">
+  <source src="https://github.com/muralesalacon/audiosmurales/releases/download/audios/Audio1.wav" type="audio/mpeg">
 </audio>
 
 <audio id="audio2">
-  <source src="https://github.com/user-attachments/files/23745767/Opinion1.wav" type="audio/mpeg">
+  <source src="https://github.com/muralesalacon/audiosmurales/releases/download/audios/Opinion1.wav" type="audio/mpeg">
 </audio>
 
 <script>
