--- a/qr1.html
+++ b/qr1.html
@@ -23,15 +23,24 @@
         left: 0;
         width: 100%;
         height: 100%;
-        font-size: 32px;
+
+        /* tamaño de fuente muy grande en mobile */
+        font-size: 8vw; /* 8% del ancho de la pantalla → escala perfecto */
+
         display: flex;
         justify-content: center;
         align-items: center;
         text-align: center;
+
         background: white;
         color: black;
         cursor: pointer;
         z-index: 999;
+
+        font-weight: bold;
+        line-height: 1.2;
+
+        padding: 0 5%;
     }
 </style>
 </head>
