--- a/qr1.html
+++ b/qr1.html
@@ -5,49 +5,60 @@
 <title>Toca para escuchar</title>
 <style>
     body, html {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background: #ffffff;
-        font-family: Arial, sans-serif;
-        user-select: none;
-    }
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #ffffff;
+    font-family: Arial, sans-serif;
+    user-select: none;
+}
 
-    #start {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
+#start {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 
-        /* tamaño de fuente muy grande en mobile */
-        font-size: 8vw; /* 8% del ancho de la pantalla → escala perfecto */
+    /* TAMAÑO DE TEXTO EXTRA GIGANTE */
+    font-size: 22vw; /* ocupa casi toda la pantalla */
+    font-weight: bold;
 
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 
-        background: white;
-        color: black;
-        cursor: pointer;
-        z-index: 999;
+    background: #000000; /* fondo negro para máximo contraste */
+    color: #ffffff;      /* texto blanco */
+    cursor: pointer;
+    z-index: 999;
 
-        font-weight: bold;
-        line-height: 1.2;
+    padding: 5%;
+}
 
-        padding: 0 5%;
-    }
+#icon {
+    font-size: 40vw; /* ICONO ENORME */
+    line-height: 0.9;
+    margin-bottom: 4vw;
+}
+
+
 </style>
 </head>
 
 <body>
 
-<div id="start">Toca para escuchar</div>
+<div id="start">
+    <div id="icon">▶️</div>
+    Toca para escuchar
+</div>
+
 
 <audio id="player" playsinline></audio>
 
